--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
   <h1 [ngClass]="{'text-danger':flag,'text-success':!flag}" >{{title}}</h1><br>
   <input type="text" [(ngModel)]="title"><br>
   <button (click)="cambiar()">cambiar</button>
+  <app-login></app-login>
 </div>
