--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <h1 [ngClass]="{'text-danger':flag,'text-success':!flag}" >{{title}}</h1><br>
+  <h1 [ngClass]="{'text-danger':flag,'text-success':!flag}">{{title}}</h1><br>
   <input type="text" [(ngModel)]="title"><br>
   <button (click)="cambiar()">cambiar</button>
 </div>
+<app-login></app-login>
