--- a/src/app/fronteras/fronteras.component.html
+++ b/src/app/fronteras/fronteras.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-    <h1>El pais de entrada es: {{paisEnRuta}}
-
-    </h1>
+    
+        <h1 ></h1>
+      
+        <h1 *ngFor="let frontera of datos?.borders">{{frontera}}</h1>
+   
 </div>
