--- a/src/app/fronteras/fronteras.component.html
+++ b/src/app/fronteras/fronteras.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>El pais de entrada es: {{paisEnRuta}}
-
+    //<h1>El pais de entrada es: {{paisEnRuta}}
+<div> *</div>
     </h1>
 </div>
