Datos generales con angular

--- a/src/app/geograficos/geograficos.component.html
+++ b/src/app/geograficos/geograficos.component.html
@@ -1,1 +1,7 @@
-<p>geograficos works!</p>
+<div class="container">
+    <h1>{{ datos.name.common }}</h1>
+    <p>Región: {{ datos.region }}</p>
+    <p>Área: {{ datos.area }}</p>
+    <p>Comienzo de semana: {{ datos.weekStart }}</p>
+  </div>
+  
