--- a/src/app/generales/generales.component.html
+++ b/src/app/generales/generales.component.html
@@ -1,1 +1,10 @@
-<p>generales works!</p>
+<div class="container">
+    Nombre nativo:<h1  *nFor="let generales of datos?.name.common"></h1><br>
+    Poblacion total:<br>
+    Region:<br>
+    Sub-Region:<br>
+    Capital:<br>
+    Area:<br>
+    Idiomas:<br>
+
+</div>
