--- a/src/app/generales/generales.component.html
+++ b/src/app/generales/generales.component.html
@@ -1,1 +1,16 @@
-<p>generales works!</p>
+<div class="container">
+
+<h1 ]ngFor="let generales of datos?.border
+">{{paisEnRuta}}</h1>
+
+<p>capital: {{datos?.capital}}</p>
+<p>poblacion: {{datos?.poblacion}}</p>
+<p>area: {{datos.area}}</p>
+<p>domiio: {{datos?.dominio}}</p>
+<p>moneda: {{datos?.moneda}}</p>
+
+
+
+
+
+</div>
