--- a/src/app/banderas/banderas.component.html
+++ b/src/app/banderas/banderas.component.html
@@ -1,1 +1,68 @@
 <p>banderas works!</p>
+
+<div class="container">
+    <header class=" mt-3">
+        <div class="row">
+            <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"
+                    class="rounded-circle">
+            </div>
+            <div class="col-sm-10">
+                <h1 class="text-center text-black  p-5">PAISES DEL MUNDO</h1>
+            </div>
+        </div>
+        <nav class="text-center">
+            <button type="button" class="btn btn-info">Datos Generales</button>
+            <button type="button" class="btn btn-info">Datos Geográficos</button>
+            <button type="button" class="btn btn-info">Traducciones</button>
+            <button type="button" class="btn btn-info">Banderas</button>
+        </nav>
+    </header>
+
+    <div class="tab-content">
+        <form action="" method="post">
+            <div>
+                <div class="row">
+                    <div class="col">
+                        Continente:<select name="continente" class="form-select ">
+                            <option value="0">Elige un continente</option>
+                            <option value="Africa">África</option>
+                            <option value="Americas">América</option>
+                            <option value="Asia">Asia</option>
+                            <option value="Europa">Europa</option>
+                            <option value="Oceania">Oceania</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        País:<select name="pais" class="form-select">
+                            <option value="0">Elige un país</option>
+                        </select>
+                        <div>
+                            <div class="container mt-3">
+                                <h2 class="text-center">BANDERAS Y ESCUDOS</h2>
+                                <img src="https://proyectoviajero.com/wp-content/uploads/2021/03/Bandera-de-Espan%CC%83a.svg"
+                                    class="float-start" alt="españa" width="304" height="236">
+                                <img src="https://cdn.mequieroir.com/wp-content/uploads/2020/09/escudo-espana.png"
+                                    class="float-end" alt="españa" width="304" height="236">
+                                <table>
+                                    <meta charset="utf-8">
+                                    <meta name="viewport" content="width=device-width, initial-scale=1">
+                                    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+                                        rel="stylesheet">
+                                    <script src="https://goo.gl/maps/uDWEUaXNcZTng1fP6"></script>
+
+                                    <title>Bootstrap Example</title>
+                                    <meta charset="utf-8">
+                                    <meta name="viewport" content="width=device-width, initial-scale=1">
+                                    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+                                        rel="stylesheet">
+                                    <script src="https://mainfacts.com/media/images/coats_of_arms/pe.svg"></script>
+
+                                </table>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
