--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,72 @@
-Continente: <select [(ngModel)]="continente" (change)="cargarPaises()">
-  <option value="0">Selecciona continente....</option>
-  <option value="europe">EUROPA</option>
-  <option value="asia">ASIA</option>
-  <option value="americas">AMERICA</option>
-  <option value="africa">AFRICA</option>
-  <option value="oceania">OCEANIA</option>
-</select> Paises:
-<select [(ngModel)]="paisSeleccionado" (change)="cambiarPais()">
-  <option value="0">Selecciona pais....</option>
-  <option value="{{pais}}" *ngFor="let pais of paises">{{pais}}</option>
-</select><br>
+<body>
+  <header>
+    <nav class="navbar-brand bg-white">
+      <div class="d-block overflow-hidden">
+        <div class="float-start" style="width: 150px; height: 120px">
+          <!--<img *ngIf="imageUrl" [src]="imageUrl" style="height: 120px">-->
+        </div>
+        <h1 class="text-center overflow-hidden" style="height: 120px !important; padding-top: 40px;">
+          PAISES DEL MUNDO
+        </h1>
+      </div>
+    </nav>
 
-<ul>
-  <li><a routerLink="generales/{{paisSeleccionado}}">generales</a></li>
-  <li><a routerLink="geograficos/{{paisSeleccionado}}">geograficos</a></li>
-  <li><a routerLink="banderas/{{paisSeleccionado}}">banderas</a></li>
-  <li><a routerLink="fronteras/{{paisSeleccionado}}">fronteras</a></li>
+    <nav class="mt-3" style="height:50px;">
+      <div class="container-fluid" id="tabs">
+        <ul class="nav nav-justified" id="ex1">
+          <li class="nav-item">
+            <a routerLink="generales/{{paisSeleccionado}}" class="nav-link fw-bold active" id="generales-tab"
+              data-bs-toggle="tab" data-bs-toggle="#generales">DATOS GENERALES</a>
+          </li>
+          <li class="nav-item">
+            <a routerLink="geograficos/{{paisSeleccionado}}" class="nav-link fw-bold" id="georgaficos-tab"
+              data-bs-toggle="tab" data-bs-toggle="#georgaficos">GEOGRAFICAS</a>
+          </li>
+          <li class="nav-item">
+            <a routerLink="traducir/{{paisSeleccionado}}" class="nav-link fw-bold" id="tarducir-tab"
+              data-bs-toggle="tab" data-bs-toggle="#traducir">TRADUCCIÓN</a>
+          </li>
+          <li class="nav-item">
+            <a routerLink="banderas/{{paisSeleccionado}}" class="nav-link fw-bold" id="bandera-tab" data-bs-toggle="tab"
+              data-bs-toggle="#bandera">BANDERA</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
-</ul>
+  <section>
+    <div class="row text-center mt-4">
+      <div class="col">
+        <div class="d-inline-block">
+          <label for="continente" class="fs-5"><b>Continente:</b>&nbsp;</label>
+        </div>
+        <div class="d-inline-block">
+          <select [(ngModel)]="continente" (change)="cargarPaises()" class="form-select" style="width:auto;">
+            <option value="" selected>Seleccione un continente</option>
+            <option value="asia">Asia</option>
+            <option value="africa">Africa</option>
+            <option value="north america">North America</option>
+            <option value="south america">South America</option>
+            <option value="europe">Europa</option>
+            <option value="oceania">Oceania</option>
+          </select>
+        </div>
+      </div>
+      <div class="col">
+        <div class="d-inline-block">
+          <label for="pais" class="fs-5"><b>Pais:</b>&nbsp;</label>
+        </div>
+        <div class="d-inline-block">
+          <select [(ngModel)]="paisSeleccionado" (change)="cambiarPais()" class="form-select">
+            <option value="" selected>Seleccione un país</option>
+            <option value="{{pais}}" *ngFor="let pais of paises">{{pais}}</option>
+          </select>
+        </div>
+
+      </div>
+    </div>
+  </section>
+</body>
+
 <router-outlet></router-outlet>
