--- a/src/app/fronteras/fronteras.component.html
+++ b/src/app/fronteras/fronteras.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     
-        <h1 ></h1>
+        <h1 class="text-secondary">PAISES FRONTERIZOS</h1>
       
-        <h1 *ngFor="let frontera of datos?.borders">{{frontera}}</h1>
+        <h1 class="m-5" *ngFor="let frontera of datos?.borders">{{frontera}}</h1>
    
 </div>
