--- a/src/app/generales/generales.component.html
+++ b/src/app/generales/generales.component.html
@@ -1,1 +1,7 @@
-<p>generales works!</p>
+<div class="container">
+    
+    <h1 class="text-secondary">DATOS GENERALES</h1>
+  
+    <h1 class="m-5" *ngFor="let dato of datosGenerales">{{dato}}</h1>
+
+</div>
