--- a/src/app/generales/generales.component.html
+++ b/src/app/generales/generales.component.html
@@ -1,14 +1,12 @@
 <div class="container">
+    <h1>{{datos?.name?.common}}</h1>
 
-<h1 ]ngFor="let generales of datos?.border
-">{{paisEnRuta}}</h1>
-
-<p>capital: {{datos?.capital}}</p>
-<p>poblacion: {{datos?.poblacion}}</p>
-<p>area: {{datos.area}}</p>
-<p>domiio: {{datos?.dominio}}</p>
-<p>moneda: {{datos?.moneda}}</p>
-
+    <p>Capital: {{datos?.capital[0]}}</p>
+    <p>Poblacion: {{datos?.population}}</p>
+    <p>Longidut: {{datos.latlng}}</p>
+    <p>Latitud: {{datos?.latlng}}</p>
+    <p *ngFor="let moneda of monedas">Moneda: {{moneda.name}}</p>
+    <p *ngFor="let moneda of monedas">Simbolo:{{moneda.Simbol}}</p>
 
 
 
