--- a/src/app/generales/generales.component.html
+++ b/src/app/generales/generales.component.html
@@ -1,10 +1,12 @@
 <div class="container">
-    <h1>{{datos?.name?.common}}</h1>
+
+    <h1 *ngFor="let frontera of datos?.borders">{{monedas}}</h1>
+    <h1>{{datos?.all?.common}}</h1>
 
     <p>Capital: {{datos?.capital[0]}}</p>
     <p>Poblacion: {{datos?.population}}</p>
-    <p>Longidut: {{datos.latlng}}</p>
-    <p>Latitud: {{datos?.latlng}}</p>
+    <p>Longitud: {{datos?.latlng[1]}}</p>
+    <p>Latitud: {{datos?.latlng[0]}}</p>
     <p *ngFor="let moneda of monedas">Moneda: {{moneda.name}}</p>
     <p *ngFor="let moneda of monedas">Simbolo:{{moneda.Simbol}}</p>
 
