--- a/src/app/banderas/banderas.component.html
+++ b/src/app/banderas/banderas.component.html
@@ -1,7 +1,14 @@
 <div class="container">
-    <h1>{{datos.name.common}}</h1>
-    <img src={{banderas}}>
-  
+    <table><tr>
+            <h1>{{datos.name.common}}</h1>
+            <td>
+    <img src={{banderas}}></td>
+    <td>
+    <img src={{datos.coatOfArms.png}}>
+</td>
+</tr>
+</table>
+
    
 
 </div>
