--- a/src/app/geograficos/geograficos.component.html
+++ b/src/app/geograficos/geograficos.component.html
@@ -1,4 +1,7 @@
 <div class="container">
 
-    <h1>{{geograficos}}</h1>
+    <h1>continente:{{datos.region}}</h1>
+    <h1>posicion en el continente:{{datos.subregion}}</h1>
+    
+
 </div>
