--- a/src/app/geograficos/geograficos.component.html
+++ b/src/app/geograficos/geograficos.component.html
@@ -1,231 +1,4 @@
-<p>geograficos works!</p>
+<div class = "container">
 
-<div class="row">
-    <div class="col megacol">
-        <ul class="nav nav-tabs nav-justified mt-5 textocabeceras">
-            <li class="nav-item">
-                <a class="nav-link active" data-bs-toggle="tab" href="#datos">
-                    <h3>Datos Generales del País</h3>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#geografia">
-                    <h3>Geografía del País</h3>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#idioma">
-                    <h3>Idioma del País</h3>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#bandera">
-                    <h3>Bandera del País</h3>
-                </a>
-            </li>
-        </ul>
-        <div class="tab-content">
-            <div class="tab-pane container active textodatos" id="datos">
-                <div class="row p-2">
-                    <div class="col">
-                        <div>
-                            <h2>Nombre del Pais</h2>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="celdagears">
-                            <img src="imagenes/gear.png" class="gear1">
-                            <img src="imagenes/gearmini.png" class="gear2">
-                        </div>
-                    </div>
-                </div>
-                <div class="row ms-5">
-                    <div class="col">
-                        <div>
-                            <h4>Capital: <span>Nombre de la Capital</span></h4>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div>
-                            <h4>Población: <span>Poblacion</span></h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="row ms-5">
-                    <div class="col">
-                        <div>
-                            <h4>Moneda: <span>Moneda</span></h4>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div>
-                            <h4>Dominio: <span>Dominio</span></h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="row ms-5">
-                    <div class="col">
-                        <div>
-                            <h4>Símbolo Divisa: <span>Divisa</span></h4>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div>
-                            <h4>Superficie: <span>Superficie</span></h4>
-                        </div>
-                    </div>
-                </div>                    
-
-            </div>
-            <div class="tab-pane container fade textodatos" id="geografia">
-                <div class="row p-2">
-                    <div class="col">
-                        <div>
-                            <h2>XnombredelPais</h2>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="celdagears">
-                            <img src="imagenes/gear.png" class="gear1">
-                            <img src="imagenes/gearmini.png" class="gear2">
-                        </div>
-                    </div>
-                </div>
-                <div class="row ms-5">
-                    <div class="col">
-                        <div>
-                            <h4>Fronteras Terrestres: <span>Frontera Terrestre del País</span></h4>
-                        </div>
-                    </div>
-                    <div class="col">
-                    </div>
-                </div>
-
-            </div>
-            <div class="tab-pane container fade textodatos" id="idioma">
-                <div class="row p-2">
-                    <div class="col">
-                        <div>
-                            <h2>XnombredelPais</h2>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="celdagears">
-                            <img src="imagenes/gear.png" class="gear1">
-                            <img src="imagenes/gearmini.png" class="gear2">
-                        </div>
-                    </div>
-                </div>
-                <div class="row ms-5">
-                    <div class="col">
-                        <div>
-                            <h4><button class="rounded botonidiomas" data-bs-toggle="collapse"
-                                    data-bs-target="#idioma1">Idioma1</button>
-                                <div id="idioma1" class="collapse">
-                                    <span>pais1, pais2, pais3</span>
-                                </div>
-                            </h4>
-                            <h4><button class="rounded botonidiomas" data-bs-toggle="collapse"
-                                    data-bs-target="#idioma2">Idioma2</button>
-                                <div id="idioma2" class="collapse">
-                                    <span>pais1, pais2, pais3</span>
-                                </div>
-                            </h4>
-                            <h4><button class="rounded botonidiomas" data-bs-toggle="collapse"
-                                    data-bs-target="#idioma3">Idioma3</button>
-                                <div id="idioma3" class="collapse">
-                                    <span>pais1, pais2, pais3</span>
-                                </div>
-                            </h4>
-                            <h4><button class="rounded botonidiomas" data-bs-toggle="collapse"
-                                    data-bs-target="#idioma4">Idioma4</button>
-                                <div id="idioma4" class="collapse">
-                                    <span>pais1, pais2, pais3</span>
-                                </div>
-                            </h4>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div>
-                            <h4><button class="rounded botonidiomas" data-bs-toggle="collapse"
-                                    data-bs-target="#idioma5">Idioma5</button>
-                                <div id="idioma5" class="collapse">
-                                    <span>pais1, pais2, pais3</span>
-                                </div>
-                            </h4>
-                            <h4><button class="rounded botonidiomas" data-bs-toggle="collapse"
-                                    data-bs-target="#idioma6">Idioma6</button>
-                                <div id="idioma6" class="collapse">
-                                    <span>pais1, pais2, pais3</span>
-                                </div>
-                            </h4>
-                            <h4><button class="rounded botonidiomas" data-bs-toggle="collapse"
-                                    data-bs-target="#idioma7">Idioma7</button>
-                                <div id="idioma7" class="collapse">
-                                    <span>pais1, pais2, pais3</span>
-                                </div>
-                            </h4>
-                            <h4><button class="rounded botonidiomas" data-bs-toggle="collapse"
-                                    data-bs-target="#idioma8">Idioma8</button>
-                                <div id="idioma8" class="collapse">
-                                    <span>pais1, pais2, pais3</span>
-                                </div>
-                            </h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="tab-pane container fade textodatos" id="bandera">
-                <div class="row p-2">
-                    <div class="col">
-                        <div>
-                            <h2>Nombre del Pais</h2>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="celdagears">
-                            <img src="imagenes/gear.png" class="gear1">
-                            <img src="imagenes/gearmini.png" class="gear2">
-                        </div>
-                    </div>
-                </div>
-                <div class="row ms-5">
-                    <div class="col">
-                        <h4>Bandera:</h4>
-                        <div>
-                            <img class="img-fluid tarjetabandera rounded"
-                                src="https://flagcdn.com/w320/es.png">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <h4>Escudo:</h4>
-                        <div>
-                            <img class="img-fluid tarjetabandera rounded"
-                                src="https://mainfacts.com/media/images/coats_of_arms/es.png">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
+    <h1></h1>
 </div>
-</div>
-<footer class="container-fluid text-center bottom-0">
-       <div class="text-center pb-3">
-    <a class="btn bg-transparent botoncentral" data-bs-toggle="tooltip" title data-bs-original-title="Nueva consulta">
-        <img src="imagenes/3d-cube-sphere.svg" width="140px"></a>                        
-</div>
-<div class="container-fluid bg-secondary rounded bg-gradient text-center text-white text-lg-start bottom-0">
-    <div class="text-center small p-0">
-        © 2022 Copyleft: <svg height="24" viewBox="0 0 16 16" version="1.1" width="24"
-            data-view-component="true">
-            <path fill-rule="evenodd"
-                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
-            </path>
-        </svg>
-        <a class="text-decoration-none text-white"
-            href="https://github.com/jdiazbasgit/becaonce2ed">github.com/jdiazbasgit/becaonce2ed</a></label>
-    </div>
-</div>
-</footer>
