--- a/src/app/pipe-personalizado/pipe-personalizado.component.html
+++ b/src/app/pipe-personalizado/pipe-personalizado.component.html
@@ -5,7 +5,7 @@
 
 <h1>numeros en español</h1>
 <ul>
-    <li *ngFor="let numero of numeros">{{numero | miPipe:'español'}}</li>
+    <li *ngFor="let numero of numeros">{{numero | miPipe:'spain'}}</li>
 </ul>
 
 <h1>numeros en portugues</h1>
