--- a/src/app/banderas/banderas.component.html
+++ b/src/app/banderas/banderas.component.html
@@ -1,5 +1,17 @@
-<div class="container"></div>
+<div class="container">
 
-<h1 *ngFor="let banderas of datos?.borders">{{banderas}}</h1>
+    <table>
+        <tr>
 
-<p>banderas works!</p>
+            <h1>{{datos?.name.common}}</h1>
+
+            <td>
+
+                <img src={{banderas}}>
+            </td>
+            <td>
+                <img src={{datos.coatOfArms.png}}>
+            </td>
+        </tr>
+    </table>
+</div>
