--- a/src/app/generales/generales.component.html
+++ b/src/app/generales/generales.component.html
@@ -1,1 +1,39 @@
-<p>generales works!</p>
+<section>
+  <div class="tab-content container mt-3">
+      <div class="tab-pane">
+          <div class="container mt-3">
+              <div class="w-100 p-3 overflow-hidden">
+                  <div class="card mb-3 w-100 border-0" style="max-width: 100%;">
+                      <div class="row g-0">
+                          <div class="col-md-4 border-0, shadow-sm, rounded mx-auto d-block"
+                              style="height:240px;" id="flag">
+                              <!--<img src='{{flags}}' class="img-fluid rounded-0" style="height:140px;" alt=''>-->
+
+                          </div>
+                          <div class="col-md-4 border-0 p-0 m-0">
+                              <div class="card-body border-0 m-0">
+                                  <h5 class="card-title text-uppercase" style="height:30px;"
+                                      id="nombrepais"></h5>
+                                  <ul class="p-0">
+                                    <li class="border-0 pl-2"><strong>Nombre nativo:</strong> {{nofficial}}</li>
+                                    <li class="border-0 pl-2"><strong>Población total:</strong> {{population}} habitantes</li>
+                                    <li class="border-0 pl-2"><strong>Región:</strong> {{region}}</li>
+                                    <li class="border-0 pl-2"><strong>Sub-Región:</strong> {{subregion}}</li>
+                                    <li class="border-0 pl-2"><strong>Capital:</strong> {{capital}}</li>
+                                    <li class="border-0 pl-2"><strong>Area:</strong> {{area}} Km<sup>2</sup></li>
+                                  </ul>
+                              </div>
+                          </div>
+                          <div class="col-md-4 border-0">
+                              <h4 class="card-title mt-3" style="height:30px;">{{paisEnRuta}}</h4>
+                              <ul id="infgencur" class="p-0 text-break">
+
+                              </ul>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
