--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,4 +39,6 @@
 -->
 
 
-<app-pipe-personalizado></app-pipe-personalizado>
+<!--<app-pipe-personalizado></app-pipe-personalizado>-->
+
+<app-ejemplo-directiva></app-ejemplo-directiva>
