--- a/src/app/geograficos/geograficos.component.html
+++ b/src/app/geograficos/geograficos.component.html
@@ -1,1 +1,7 @@
-<p>geograficos works!</p>
+<div class="container">
+    
+    <h1 class="text-secondary">PAISES FRONTERIZOS</h1>
+      
+    <h1 class="m-5" *ngFor="let datoGeo of datosGeo">{{datoGeo}}</h1>
+
+</div>
