--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,8 @@ Continente: <select [(ngModel)]="continente" (change)="cargarPaises()">
   <li><a routerLink="geograficos/{{paisSeleccionado}}">geograficos</a></li>
   <li><a routerLink="banderas/{{paisSeleccionado}}">banderas</a></li>
   <li><a routerLink="fronteras/{{paisSeleccionado}}">fronteras</a></li>
-
 </ul>
+
+
 <router-outlet></router-outlet>
+<app-pruebas-pipes></app-pruebas-pipes>
