--- a/src/app/generales/generales.component.html
+++ b/src/app/generales/generales.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="car">
 
     <h1 *ngFor="let generales of datos?.borders">{{generales}}</h1>
     <h1>{{datos?.all?.common}}</h1>
