--- a/src/app/banderas/banderas.component.html
+++ b/src/app/banderas/banderas.component.html
@@ -1,1 +1,9 @@
-<p>banderas works!</p>
+<div>
+
+    <h1 class="text-secondary">Banderas</h1>
+    <img class="img-fluid tarjetabandera m-5 rounded" src="{{rutaBandera}}">
+
+    <h1 class="text-secondary">Escudo</h1>
+    <img class="img-fluid tarjetabandera m-5 rounded" src="{{rutaEscudo}}">
+    
+</div>
