--- a/src/app/banderas/banderas.component.html
+++ b/src/app/banderas/banderas.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="col" style="text-align: center;">
 
     <h1 class="text-secondary">Banderas</h1>
     <img class="img-fluid tarjetabandera m-5 rounded" src="{{rutaBandera}}">
