--- a/src/app/banderas/banderas.component.html
+++ b/src/app/banderas/banderas.component.html
@@ -1,1 +1,6 @@
-<p>banderas works!</p>
+<div class="container">
+    <h1>Bandera y Escudo de {{ paisSeleccionado }}</h1>
+    <img [src]="banderaUrl" alt="Bandera de {{ paisSeleccionado }}" width="200">
+    <img [src]="escudoUrl" alt="Escudo de {{ paisSeleccionado }}" width="200">
+  </div>
+  
