--- a/src/app/fronteras/fronteras.component.html
+++ b/src/app/fronteras/fronteras.component.html
@@ -1,7 +1,6 @@
+<!-- fronteras.component.html -->
 <div class="container">
-    
-        <h1 ></h1>
+        <h1></h1>
+        <h1 *ngFor="let frontera of fronterasCompletas">{{ frontera }}</h1>
+      </div>
       
-        <h1 *ngFor="let frontera of datos?.borders">{{frontera}}</h1>
-   
-</div>
