--- a/src/app/geograficos/geograficos.component.html
+++ b/src/app/geograficos/geograficos.component.html
@@ -2,6 +2,6 @@
     <h1>{{ datos.name.common }}</h1>
     <p>Región: {{ datos.region }}</p>
     <p>Área: {{ datos.area }}</p>
-    <p>Comienzo de semana: {{ datos.weekStart }}</p>
+    <p>Comienzo de semana: {{ datos.startOfWeek}}</p>
   </div>
   
