--- a/src/app/banderas/banderas.component.html
+++ b/src/app/banderas/banderas.component.html
@@ -6,7 +6,7 @@
     
     <h1>{{datos?.name.flags}}</h1>
 
-    <img src={{banderas}}>
-    <img src={{datos.coatOfArms.png}}>
+    <img src="{{banderas}}"  width="400" height="200">
+    <img src="{{escudo}}"  width="400" height="400"  >
 
 </div>
