--- a/src/app/banderas/banderas.component.html
+++ b/src/app/banderas/banderas.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     
-    <h1 class="text-secondary">Bandera</h1>  
+    <h1 class="text-secondary">BANDERA</h1>  
     <img class="img-fluid tarjetabandera m-5 rounded" src={{rutaBandera}}>
     
-    <h1 class="text-secondary">Escudo</h1>
+    <h1 class="text-secondary">ESCUDO</h1>
     <img class="img-fluid tarjetabandera m-5 rounded" src={{rutaEscudo}}>
 
 </div>
