--- a/src/app/fronteras/fronteras.component.html
+++ b/src/app/fronteras/fronteras.component.html
@@ -2,6 +2,6 @@
     
         <h1 class="text-secondary">PAISES FRONTERIZOS</h1>
       
-        <h1 class="m-5" *ngFor="let frontera of datos?.borders">{{frontera}}</h1>
+        <h1 class="m-5" *ngFor="let frontera of fronteras">{{frontera | pipeAcronimos}}</h1>
    
 </div>
