--- a/src/app/ejemplo-direc-tiva/ejemplo-direc-tiva.component.html
+++ b/src/app/ejemplo-direc-tiva/ejemplo-direc-tiva.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <DIV appMiDirectiva>
     </DIV>
-
+<h1>dasds{{aa | pipeFronteras}}</h1>
     <img src="asdfasdfasdfasd" appDirectivaEvento>
 </div>
