--- a/src/app/fronteras/fronteras.component.html
+++ b/src/app/fronteras/fronteras.component.html
@@ -3,5 +3,8 @@
         <h1 ></h1>
       
         <h1 *ngFor="let frontera of datos?.borders">{{frontera}}</h1>
-   
+       
+<h1 *ngFor="let NombreFrontera1 of datos?.countries">{{fronteras}}</h1>
+
+
 </div>
