--- a/src/app/generales/generales.component.html
+++ b/src/app/generales/generales.component.html
@@ -1,16 +1,6 @@
 <div class="container">
 
-    <h2> {{datos?.name.common}} </h2>
-    <p>
-        Poblacion: {{datos?.population}} <br>
-        Longitud: {{datos?.latlng[1]}} <br>
-        Latitud: {{datos?.latlng[0]}} <br>
-        Capital: {{datos?.capital[0]}} <br>
-    </p>
+    <p>Nombre: {{datos.name.common}} </p>
 
-    <p *ngFor="let moneda of monedas">
-        Moneda: {{moneda.name}} <br>
-        Simbolo: {{moneda.symbol}} <br>
-    </p>
-        
+    <p *ngFor="let moneda of monedas">Moneda: {{moneda.name}} </p>
 </div>
