--- a/src/app/pipe-personalizado/pipe-personalizado.component.html
+++ b/src/app/pipe-personalizado/pipe-personalizado.component.html
@@ -22,3 +22,5 @@
 <ul>
     <li >{{1 | miPipe:'' | uppercase}}</li>
 </ul>
+
+<p>El nombre completo de {{ countryCode }} es {{countryCode|countryName|async}} </p>
