--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@ Continente: <select [(ngModel)]="continente" (change)="cargarPaises()">
   <li><a routerLink="geograficos/{{paisSeleccionado}}">geograficos</a></li>
   <li><a routerLink="banderas/{{paisSeleccionado}}">banderas</a></li>
   <li><a routerLink="fronteras/{{paisSeleccionado}}">fronteras</a></li>
-
+<!--
 </ul>
 <h1>el texto es: {{title}}</h1>
 <h1>el texto en mayusculas es: {{title | uppercase}}</h1>
@@ -35,4 +35,5 @@ Continente: <select [(ngModel)]="continente" (change)="cargarPaises()">
 
 
 <router-outlet></router-outlet>
-<app-pipe-personalizado></app-pipe-personalizado>
+<app-pipe-personalizado></app-pipe-personalizado>-->
+<app-pipe-personalizado [countryCode]="selectedCountryCode"></app-pipe-personalizado>
