--- a/src/app/generales/generales.component.html
+++ b/src/app/generales/generales.component.html
@@ -1,4 +1,4 @@
 <h1>nombre:{{datos.name.common}}</h1>
 <h1>capital:{{datos.capital}}</h1>
 <h1>poblacion:{{datos.population}}</h1>
-<h1>moneda:{{datos.currencies.symbol}}</h1>
+<h1>moneda:{{datos.currencies[1]}}</h1>
