--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,7 @@ Continente: <select [(ngModel)]="continente" (change)="cargarPaises()">
   <li><a routerLink="geograficos/{{paisSeleccionado}}">geograficos</a></li>
   <li><a routerLink="banderas/{{paisSeleccionado}}">banderas</a></li>
   <li><a routerLink="fronteras/{{paisSeleccionado}}">fronteras</a></li>
+  <li><a routerLink="components/{{paisSeleccionado}}">components</a></li>
 
 </ul>
 <router-outlet></router-outlet>
