--- a/src/app/banderas/banderas.component.html
+++ b/src/app/banderas/banderas.component.html
@@ -2,7 +2,7 @@
 
 <div class="container">
 
-    <h1 *ngFor="let banderas of datos?.flags">{{banderas}}</h1>
+    <!--<h1 *ngFor="let banderas of datos?.flags">{{banderas}}</h1>-->
     
     <h1>{{datos?.name.flags}}</h1>
 
