--- a/src/app/generales/generales.component.html
+++ b/src/app/generales/generales.component.html
@@ -1,7 +1,7 @@
 <div class="car">
 
     <h1 *ngFor="let generales of datos?.borders">{{generales}}</h1>
-    <h1>{{datos?.all?.common}}</h1>
+   <!-- <h1>{{datos?.all?.common}}</h1>-->
 
     <p>Capital: {{datos?.capital[0]}}</p>
     <p>Poblacion: {{datos?.population}}</p>
