--- a/src/app/fronteras/fronteras.component.html
+++ b/src/app/fronteras/fronteras.component.html
@@ -1,10 +1,7 @@
 <div class="container">
-    
-        <h1 ></h1>
-      
-        <h1 *ngFor="let frontera of datos?.borders">{{frontera}}</h1>
-       
-<h1 *ngFor="let NombreFrontera1 of datos?.countries">{{fronteras}}</h1>
 
+       <h1 *ngFor="let frontera of datos?.borders">{{frontera}}</h1>
+
+       <!--<h1 *ngFor="let nombreFrontera1 of datos?.borders">{{nombreFrontera1}}</h1>--> 
 
 </div>
