--- a/src/app/geograficos/geograficos.component.html
+++ b/src/app/geograficos/geograficos.component.html
@@ -1,4 +1,6 @@
 <div class = "container">
-
-    <h1></h1>
+    <h1>{{ datos.name.common }}</h1>
+    <p>REGIÓN: {{ datos.region }}</p>
+    <p>ÁREA: {{ datos.area }}</p>
+    <p>INICIO DE LA SEMANA: {{ datos.startOfWeek }}</p>
 </div>
