errrr, no turula

--- a/src/app/banderas/banderas.component.html
+++ b/src/app/banderas/banderas.component.html
@@ -1,1 +1,66 @@
-<p>banderas works!</p>
+<body>
+    <div class="container">
+      <header>
+        <img src="https://image.shutterstock.com/image-vector/cartoon-planet-earth-on-white-260nw-2140149873.jpg"
+          align="left" width="227" height="156">
+        <img src="https://image.shutterstock.com/image-vector/cartoon-planet-earth-on-white-260nw-2140149873.jpg"
+          align="right" width="227" height="156">
+        <div class="container-fluid p-5 bg-success text-white text-center ">
+  
+          <h1>PAISES DEL MUNDO</h1>
+        </div>
+      </header>
+  
+      <div class="container mt-3">
+        <ul class="nav nav-pills nav-justified">
+          <li class="nav-item">
+            <a class="nav-link active bg-success" href="#">Datos generales</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active bg-success" href="#">Datos geograficos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active bg-success" href="#">Banderas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active bg-success" href="#">Traducción</a>
+          </li>
+        </ul>
+      </div>
+      <div class="row mt-5">
+        <div class="col">
+          <h2>Seleccione continente</h2>
+          <label for="sel1" class="form-label"></label>
+          <select class="form-select bg-success" id="sel1" name="sellist1">
+            <option>Europa</option>
+            <option>America</option>
+            <option>Asia</option>
+            <option>Africa</option>
+            <option>Oceania</option>
+          </select>
+        </div>
+        <div class="col">
+          <h2>Seleccione país</h2>
+          <label for="sel1" class="form-label"></label>
+          <select class="form-select bg-success " id="sel1" name="sellist1">
+            <option>XXXXXXXXXX</option>
+          </select>
+        </div>
+      </div>
+      <div class="mx-auto w-50 mt-3 container-fluid">
+        <table class="w-100">
+          <tr>
+            <td>
+              <img src="https://flagcdn.com/es.svg" width="300" height="175">
+            </td>
+            <td><img src="https://mainfacts.com/media/images/coats_of_arms/es.svg" width="300" height="175"></td>
+          </tr>
+  
+  
+        </table>
+      </div>
+    </div>
+    <div class="row mx-auto w-50 mt-3 container-fluid">
+  
+  
+    </div>
