--- a/src/app/geograficos/geograficos.component.html
+++ b/src/app/geograficos/geograficos.component.html
@@ -1,1 +1,11 @@
-<p>geograficos works!</p>
+<div class="container">
+    <header>
+      <img src="https://image.shutterstock.com/image-vector/cartoon-planet-earth-on-white-260nw-2140149873.jpg"
+        align="left" width="227" height="156">
+      <img src="https://image.shutterstock.com/image-vector/cartoon-planet-earth-on-white-260nw-2140149873.jpg"
+        align="right" width="227" height="156">
+      <div class="container-fluid p-5 bg-success text-white text-center ">
+
+        <h1>PAISES DEL MUNDO</h1>
+      </div>
+    </header>
